--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! I currently work as a QA Engineer in Atlanta, GA</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Omaha, NE but have lived here in the Atlanta metro area for 15 years</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Current hobbies include drawing and hiking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to work as a software engineer concentrating on testing infrastructures</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live south of the city in Fairburn, GA/p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love the versatility that the web developer skillset will give me. </p>
     </section>
 
     <footer id="footer">
