--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>What's your dream job?</h1>
       <p>I would love to work as a software engineer concentrating on testing infrastructures</p>
       <h1>Where do you live?</h1>
-      <p>I live south of the city in Fairburn, GA/p>
+      <p>I live south of the city in Fairburn, GA</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>I love the versatility that the web developer skillset will give me. </p>
     </section>
